Split playback controls into a separate widget
The UI definition file for the main window is getting pretty
complicated, so let's move the box that contains all the playback and
queue buttons into its own composite widget.

--- a/src/gtk/window.ui
+++ b/src/gtk/window.ui
@@ -119,169 +119,20 @@
                                   <class name="numeric"/>
                                 </style>
                               </object>
-                            </child><!--
-                            <child>
-                              <object class="GtkScale" id="position_scale">
-                              </object>
-                            </child>-->
+                            </child>
                           </object>
                         </child>
                       </object>
                     </child>
+
                     <child>
-                      <object class="GtkBox">
-                        <property name="orientation">vertical</property>
+                      <object class="AmberolPlaybackControl" id="playback_control">
                         <property name="halign">center</property>
                         <property name="margin-top">36</property>
                         <property name="margin-bottom">36</property>
-                        <property name="spacing">12</property>
-                        <child>
-                          <object class="GtkBox" id="controls_box">
-                            <property name="spacing">12</property>
-                            <property name="halign">center</property>
-                            <child>
-                              <object class="GtkButton" id="previous_button">
-                                <property name="icon-name">media-skip-backward-symbolic</property>
-                                <property name="action-name">win.previous</property>
-                                <property name="valign">center</property>
-                                <style>
-                                  <class name="circular"/>
-                                </style>
-                                <accessibility>
-                                  <property name="label" translatable="yes">Skip backwards</property>
-                                </accessibility>
-                              </object>
-                            </child>
-                            <child>
-                              <object class="GtkButton" id="rewind_button">
-                                <property name="icon-name">media-seek-backward-symbolic</property>
-                                <property name="action-name">win.seek-backwards</property>
-                                <property name="valign">center</property>
-                                <style>
-                                  <class name="circular"/>
-                                </style>
-                                <accessibility>
-                                  <property name="label" translatable="yes">Seek backwards</property>
-                                </accessibility>
-                              </object>
-                            </child>
-                            <child>
-                              <object class="GtkButton" id="play_button">
-                                <property name="icon-name">media-playback-start-symbolic</property>
-                                <property name="action-name">win.play</property>
-                                <property name="valign">center</property>
-                                <style>
-                                  <class name="circular"/>
-                                  <class name="large"/>
-                                </style>
-                                <accessibility>
-                                  <property name="label" translatable="yes">Toggle play</property>
-                                </accessibility>
-                              </object>
-                            </child>
-                            <child>
-                              <object class="GtkButton" id="forward_button">
-                                <property name="icon-name">media-seek-forward-symbolic</property>
-                                <property name="action-name">win.seek-forward</property>
-                                <property name="valign">center</property>
-                                <style>
-                                  <class name="circular"/>
-                                </style>
-                                <accessibility>
-                                  <property name="label" translatable="yes">Seek forward</property>
-                                </accessibility>
-                              </object>
-                            </child>
-                            <child>
-                              <object class="GtkButton" id="next_button">
-                                <property name="icon-name">media-skip-forward-symbolic</property>
-                                <property name="action-name">win.next</property>
-                                <property name="valign">center</property>
-                                <style>
-                                  <class name="circular"/>
-                                </style>
-                                <accessibility>
-                                  <property name="label" translatable="yes">Skip forward</property>
-                                </accessibility>
-                              </object>
-                            </child>
-                          </object>
-                        </child>
-                        <child>
-                          <object class="AmberolVolumeControl" id="volume_control">
-                            <property name="hexpand">true</property>
-                          </object>
-                        </child>
-                        <child>
-                          <object class="GtkCenterBox" id="queue_controls_box">
-                            <child type="start">
-                              <object class="GtkBox">
-                                <property name="halign">start</property>
-                                <property name="spacing">12</property>
-                                <child>
-                                  <object class="GtkButton" id="playlist_button">
-                                    <property name="icon-name">view-list-bullet-symbolic</property>
-                                    <property name="action-name">queue.show</property>
-                                    <property name="valign">center</property>
-                                    <property name="tooltip-text" translatable="yes">Show the playlist</property>
-                                    <style>
-                                      <class name="circular"/>
-                                    </style>
-                                    <accessibility>
-                                      <property name="label" translatable="yes">Show playlist</property>
-                                    </accessibility>
-                                  </object>
-                                </child>
-                                <child>
-                                  <object class="GtkToggleButton" id="shuffle_button">
-                                    <property name="icon-name">media-playlist-shuffle-symbolic</property>
-                                    <property name="valign">center</property>
-                                    <property name="tooltip-text" translatable="yes">Shuffle the playlist</property>
-                                    <style>
-                                      <class name="circular"/>
-                                    </style>
-                                  </object>
-                                </child>
-                              </object>
-                            </child>
-                            <child type="end">
-                              <object class="GtkBox">
-                                <property name="halign">end</property>
-                                <property name="spacing">12</property>
-                                <child>
-                                  <object class="GtkButton" id="repeat_button">
-                                    <property name="icon-name">media-playlist-consecutive-symbolic</property>
-                                    <property name="action-name">queue.repeat-mode</property>
-                                    <property name="valign">center</property>
-                                    <style>
-                                      <class name="circular"/>
-                                    </style>
-                                    <accessibility>
-                                      <property name="label" translatable="yes">Repeat</property>
-                                    </accessibility>
-                                  </object>
-                                </child>
-                                <child>
-                                  <object class="GtkMenuButton" id="menu_button">
-                                    <property name="menu-model">primary_menu</property>
-                                    <property name="icon-name">open-menu-symbolic</property>
-                                    <property name="primary">true</property>
-                                    <property name="halign">end</property>
-                                    <property name="valign">center</property>
-                                    <style>
-                                      <class name="circular"/>
-                                    </style>
-                                    <accessibility>
-                                      <property name="label" translatable="yes">Menu</property>
-                                    </accessibility>
-                                  </object>
-                                </child>
-                              </object>
-                            </child>
-                          </object>
-                        </child>
                       </object>
                     </child>
+
                     <child>
                       <object class="GtkRevealer" id="queue_revealer">
                         <property name="transition-type">slide-down</property>
@@ -327,31 +178,4 @@
       </object>
     </property>
   </template>
-
-  <menu id="primary_menu">
-    <section>
-      <item>
-        <attribute name="label" translatable="yes">Add _Song</attribute>
-        <attribute name="action">queue.add-song</attribute>
-      </item>
-      <item>
-        <attribute name="label" translatable="yes">Add _Folder</attribute>
-        <attribute name="action">queue.add-folder</attribute>
-      </item>
-      <item>
-        <attribute name="label" translatable="yes">Clear</attribute>
-        <attribute name="action">queue.clear</attribute>
-      </item>
-    </section>
-    <section>
-      <item>
-        <attribute name="label" translatable="yes">_Keyboard Shortcuts</attribute>
-        <attribute name="action">win.show-help-overlay</attribute>
-      </item>
-      <item>
-        <attribute name="label" translatable="yes">_About Amberol</attribute>
-        <attribute name="action">app.about</attribute>
-      </item>
-    </section>
-  </menu>
 </interface>
