--- a/src/gtk/playback-control.ui
+++ b/src/gtk/playback-control.ui
@@ -93,7 +93,7 @@
               <child>
                 <object class="GtkButton" id="playlist_button">
                   <property name="icon-name">view-list-bullet-symbolic</property>
-                  <property name="action-name">queue.show</property>
+                  <property name="action-name">queue.toggle</property>
                   <property name="valign">center</property>
                   <property name="tooltip-text" translatable="yes">Show the playlist</property>
                   <style>
