--- a/src/gtk/queue-row.ui
+++ b/src/gtk/queue-row.ui
@@ -15,6 +15,8 @@
         <child>
           <object class="GtkLabel" id="song_title_label">
             <property name="xalign">0</property>
+            <property name="max-width-chars">35</property>
+            <property name="ellipsize">end</property>
             <style>
               <class name="song-title"/>
             </style>
@@ -23,6 +25,8 @@
         <child>
           <object class="GtkLabel" id="song_artist_label">
             <property name="xalign">0</property>
+            <property name="max-width-chars">35</property>
+            <property name="ellipsize">end</property>
             <style>
               <class name="song-artist"/>
             </style>
