style: Change the background of the popovers
Make the popover fit the style of the main window when recoloring it.

Fixes: #12

--- a/src/gtk/style.css
+++ b/src/gtk/style.css
@@ -62,6 +62,12 @@ window.main-window {
   transition-timing-function: ease;
 }
 
+.main-window popover arrow,
+.main-window popover contents {
+  background-color: @background_color_1;
+  color: @foreground_color;
+}
+
 .main-window button:focus,
 .main-window row:focus {
   outline-color: alpha(currentColor, .25);
