ui: Tweak the height of the window
- Drop pointless spacing between the header bar and the main content
  box, as we have margin just for that in the main content box.
- Tweak the font size of the song details in the playlist.
- Only show 4/5 songs in the playlist.

This should reduce the height of the window to below 800 pixels, or
enough to fit in a 768p screen.

Fixes: #16

--- a/src/gtk/style.css
+++ b/src/gtk/style.css
@@ -39,7 +39,11 @@ queuerow {
 
 queuerow label.song-title {
   font-weight: 700;
-  font-size: 100%;
+  font-size: 85%;
+}
+
+queuerow label.song-artist {
+  font-size: 85%;
 }
 
 dragoverlay {
