style: Lighten the popover background
To avoid the popover bleeding into the main window.

--- a/src/gtk/style.css
+++ b/src/gtk/style.css
@@ -71,7 +71,7 @@ window.main-window {
 
 .main-window popover arrow,
 .main-window popover contents {
-  background-color: @background_color_1;
+  background-color: shade(@background_color_1, 1.2);
   color: @foreground_color;
 }
 
