--- a/src/gtk/song-details.ui
+++ b/src/gtk/song-details.ui
@@ -17,9 +17,10 @@
                   <object class="GtkStackPage">
                     <property name="name">no-image</property>
                     <property name="child">
-                      <object class="GtkPicture">
+                      <object class="GtkImage">
                         <property name="overflow">hidden</property>
-                        <property name="file">resource:///io/bassi/Amberol/icons/scalable/actions/music-note-single-symbolic.svg</property>
+                        <property name="icon-name">folder-music-symbolic</property>
+                        <property name="pixel-size">64</property>
                         <style>
                           <class name="no-cover"/>
                           <class name="icon-dropshadow"/>
