--- a/src/gtk/style.css
+++ b/src/gtk/style.css
@@ -26,7 +26,7 @@ picture.cover {
   background: linear-gradient(to bottom, @background_color_1, @background_color_2);
 }
 
-picture.no-cover {
+songdetails image.no-cover {
   min-width: 128px;
   min-height: 128px;
   box-shadow: 0px 1px 4px rgba(0,0,0,0.5),
