--- a/src/gtk/window.ui
+++ b/src/gtk/window.ui
@@ -26,59 +26,89 @@
                   </object>
                 </child>
                 <child>
-                  <object class="GtkBox" id="main_box">
-                    <property name="orientation">vertical</property>
-                    <property name="valign">start</property>
-                    <property name="vexpand">true</property>
-                    <property name="spacing">6</property>
-                    <style>
-                      <class name="main-box"/>
-                    </style>
-
-                    <!-- Song details -->
+                  <object class="GtkStack" id="main_stack">
                     <child>
-                      <object class="AmberolSongDetails" id="song_details">
-                      </object>
-                    </child>
-
-                    <!-- Playback and queue controls -->
-                    <child>
-                      <object class="AmberolPlaybackControl" id="playback_control">
-                        <property name="halign">center</property>
-                        <property name="margin-top">12</property>
-                        <property name="margin-bottom">12</property>
-                      </object>
-                    </child>
-
-                    <!-- Playlist view -->
-                    <child>
-                      <object class="GtkRevealer" id="queue_revealer">
-                        <property name="transition-type">slide-down</property>
-                        <property name="reveal-child">false</property>
+                      <object class="GtkStackPage">
+                        <property name="name">initial-view</property>
                         <property name="child">
-                          <object class="GtkBox">
+                          <object class="AdwStatusPage" id="status_page">
+                            <property name="title">Amberol</property>
+                            <property name="description" translatable="yes">Select a folder or drag files on the application to add songs to the playlist</property>
+                            <property name="child">
+                              <object class="GtkButton">
+                                <property name="label" translatable="yes">Choose a folder</property>
+                                <property name="action-name">queue.add-folder</property>
+                                <style>
+                                  <class name="suggested-action"/>
+                                  <class name="pill"/>
+                                </style>
+                              </object>
+                            </property>
+                          </object>
+                        </property>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="GtkStackPage">
+                        <property name="name">main-view</property>
+                        <property name="child">
+                          <object class="GtkBox" id="main_box">
                             <property name="orientation">vertical</property>
+                            <property name="valign">start</property>
+                            <property name="vexpand">true</property>
                             <property name="spacing">6</property>
+                            <style>
+                              <class name="main-box"/>
+                            </style>
+
+                            <!-- Song details -->
                             <child>
-                              <object class="GtkLabel" id="queue_length_label">
-                                <property name="xalign">0</property>
-                                <property name="use-markup">true</property>
-                                <property name="margin-start">6</property>
+                              <object class="AmberolSongDetails" id="song_details">
                               </object>
                             </child>
+
+                            <!-- Playback and queue controls -->
                             <child>
-                              <object class="GtkScrolledWindow">
-                                <property name="hscrollbar-policy">never</property>
-                                <property name="vscrollbar-policy">automatic</property>
-                                <property name="max-content-height">250</property>
-                                <property name="propagate-natural-height">true</property>
+                              <object class="AmberolPlaybackControl" id="playback_control">
+                                <property name="halign">center</property>
+                                <property name="margin-top">12</property>
+                                <property name="margin-bottom">12</property>
+                              </object>
+                            </child>
+
+                            <!-- Playlist view -->
+                            <child>
+                              <object class="GtkRevealer" id="queue_revealer">
+                                <property name="transition-type">slide-down</property>
+                                <property name="reveal-child">false</property>
                                 <property name="child">
-                                  <object class="GtkListView" id="queue_view">
-                                    <property name="single-click-activate">true</property>
-                                    <property name="hexpand">true</property>
-                                    <style>
-                                      <class name="navigation-sidebar"/>
-                                    </style>
+                                  <object class="GtkBox">
+                                    <property name="orientation">vertical</property>
+                                    <property name="spacing">6</property>
+                                    <child>
+                                      <object class="GtkLabel" id="queue_length_label">
+                                        <property name="xalign">0</property>
+                                        <property name="use-markup">true</property>
+                                        <property name="margin-start">6</property>
+                                      </object>
+                                    </child>
+                                    <child>
+                                      <object class="GtkScrolledWindow">
+                                        <property name="hscrollbar-policy">never</property>
+                                        <property name="vscrollbar-policy">automatic</property>
+                                        <property name="max-content-height">250</property>
+                                        <property name="propagate-natural-height">true</property>
+                                        <property name="child">
+                                          <object class="GtkListView" id="queue_view">
+                                            <property name="single-click-activate">true</property>
+                                            <property name="hexpand">true</property>
+                                            <style>
+                                              <class name="navigation-sidebar"/>
+                                            </style>
+                                          </object>
+                                        </property>
+                                      </object>
+                                    </child>
                                   </object>
                                 </property>
                               </object>
@@ -87,9 +117,9 @@
                         </property>
                       </object>
                     </child>
-
                   </object>
                 </child>
+
               </object>
             </property>
           </object>
