--- a/src/gtk/style.css
+++ b/src/gtk/style.css
@@ -58,6 +58,10 @@ dragoverlay {
   color: @accent_fg_color;
 }
 
+scrolledwindow undershoot.top {
+  box-shadow: inset 0 1px @borders;
+}
+
 window.main-window {
   background: linear-gradient(127deg, alpha(@background_color_1, 0.70), @background_color_1 70.1%),
               linear-gradient(217deg, alpha(@background_color_3, 0.70), @background_color_3 70.1%),
