Add cover art to the queue row widget
Bind the cover property on the Song object to a property on the QueueRow
widget that gets proxied to the CoverPicture widget.

--- a/src/gtk/style.css
+++ b/src/gtk/style.css
@@ -53,6 +53,14 @@ queuerow label.song-artist {
   font-size: 85%;
 }
 
+queuerow picture.cover {
+  min-width: 48px;
+  min-height: 48px;
+  box-shadow: initial;
+  border-radius: 2px;
+  margin: 0px;
+}
+
 dragoverlay {
   box-shadow: none;
 }
