queue: Don't duplicate playing state
The largest part of our UI is dedicate to showing what is currently
playing, so there's no need to replicate that information in the
playlist view.

We can indicate what is going to be playing next, instead.

--- a/src/gtk/style.css
+++ b/src/gtk/style.css
@@ -39,7 +39,12 @@ songdetails image.no-cover {
   margin: 6px;
 }
 
-queuerow {
+queuerow .currently-playing {
+  padding-left: 6px;
+  font-weight: 700;
+}
+
+queuerow box.song-details {
   padding: 6px;
   border-spacing: 21px;
 }
