style: Use card class for the cover fallback
Makes the cover art background fallback more distinct.

Fixes: #36

--- a/src/gtk/song-details.ui
+++ b/src/gtk/song-details.ui
@@ -22,7 +22,7 @@
                         <property name="icon-name">folder-music-symbolic</property>
                         <property name="pixel-size">64</property>
                         <style>
-                          <class name="no-cover"/>
+                          <class name="card"/>
                           <class name="icon-dropshadow"/>
                         </style>
                       </object>
