style: Fix CSS selector for the title in the song details
The hierarchy has slightly changed, so let's match this with a higher
specificity.

--- a/src/gtk/style.css
+++ b/src/gtk/style.css
@@ -9,7 +9,7 @@ button.large {
   margin-right: 24px;
 }
 
-.song-title {
+songdetails label.song-title {
   /* match title-1 */
   font-size: 15pt;
   font-weight: 800;
