style: Add a bit more space
Between the song details and the playback controls.

--- a/src/gtk/style.css
+++ b/src/gtk/style.css
@@ -9,6 +9,10 @@ button.large {
   margin-right: 24px;
 }
 
+songdetails {
+  padding-bottom: 24px;
+}
+
 songdetails label.song-title {
   /* match title-1 */
   font-size: 15pt;
