--- a/src/gtk/queue-row.ui
+++ b/src/gtk/queue-row.ui
@@ -42,6 +42,7 @@
                   <object class="GtkBox" id="queue_box">
                     <property name="orientation">vertical</property>
                     <property name="valign">center</property>
+                    <property name="hexpand">true</property>
                     <property name="spacing">3</property>
                     <child>
                       <object class="GtkLabel" id="song_title_label">
@@ -63,6 +64,15 @@
                         </style>
                       </object>
                     </child>
+                  </object>
+                </child>
+                <child type="end">
+                  <object class="GtkButton" id="remove_button">
+                    <property name="icon-name">user-trash-symbolic</property>
+                    <property name="halign">center</property>
+                    <property name="valign">center</property>
+                    <property name="tooltip_text" translatable="yes">Remove</property>
+                    <property name="visible">0</property>
                   </object>
                 </child>
                 <style>
