ui: Center the cover art in the queue row
The default is "fill", which will stretch the cover art if the size of
the queue row changes.

--- a/src/gtk/queue-row.ui
+++ b/src/gtk/queue-row.ui
@@ -18,6 +18,8 @@
                           <object class="GtkImage">
                             <property name="icon-name">folder-music-symbolic</property>
                             <property name="pixel-size">24</property>
+                            <property name="halign">center</property>
+                            <property name="valign">center</property>
                             <style>
                               <class name="dim-label"/>
                               <class name="card"/>
@@ -32,6 +34,8 @@
                         <property name="child">
                           <object class="AmberolCoverPicture" id="song_cover_image">
                             <property name="cover-size">1</property>
+                            <property name="halign">center</property>
+                            <property name="valign">center</property>
                           </object>
                         </property>
                       </object>
