--- a/src/gtk/playback-control.ui
+++ b/src/gtk/playback-control.ui
@@ -8,6 +8,12 @@
       <property name="orientation">vertical</property>
       <property name="spacing">6</property>
       <child>
+        <object class="AmberolWaveformView" id="waveform_view">
+          <property name="hexpand">true</property>
+          <property name="valign">center</property>
+        </object>
+      </child>
+      <child>
         <object class="GtkBox" id="controls_box">
           <property name="spacing">12</property>
           <property name="halign">center</property>
