Ensure that the playlist toggle and flap keep in sync
There's a bidirectional binding between the Window:playlist-visible
and the AdwFlap:reveal-flap properties. To keep everything working
together we need to use a property action instead of manually toggling
stuff.

Fixes: #55

--- a/src/gtk/playback-control.ui
+++ b/src/gtk/playback-control.ui
@@ -97,7 +97,7 @@
               <property name="halign">start</property>
               <property name="spacing">12</property>
               <child>
-                <object class="GtkButton" id="playlist_button">
+                <object class="GtkToggleButton" id="playlist_button">
                   <property name="icon-name">view-list-bullet-symbolic</property>
                   <property name="action-name">queue.toggle</property>
                   <property name="valign">center</property>
