--- a/src/gtk/style.css
+++ b/src/gtk/style.css
@@ -38,6 +38,14 @@ picture.cover {
 
 waveformview {
   padding-bottom: 6px;
+  opacity: 0.55;
+  transition-property: opacity;
+  transition-duration: 100ms;
+  transition-timing-function: ease;
+}
+
+waveformview:hover {
+  opacity: 1.0;
 }
 
 queuerow .currently-playing {
