Flip the playlist around
Instead of having it on the right hand side (for LTR languages), put the
playlist on the left, and make it slighly smaller so it can be overlaid
without covering the whole window.

--- a/src/gtk/playback-control.ui
+++ b/src/gtk/playback-control.ui
@@ -17,6 +17,7 @@
         <object class="GtkBox" id="controls_box">
           <property name="spacing">24</property>
           <property name="halign">center</property>
+          <property name="hexpand">true</property>
           <child>
             <object class="GtkButton" id="previous_button">
               <property name="icon-name">media-skip-backward-symbolic</property>
