--- a/src/gtk/style.css
+++ b/src/gtk/style.css
@@ -75,6 +75,11 @@ queuerow picture.cover {
   margin: 0px;
 }
 
+.queue-length {
+  padding-top: 12px;
+  padding-left: 12px;
+}
+
 dragoverlay {
   box-shadow: none;
 }
