--- a/src/gtk/queue-row.ui
+++ b/src/gtk/queue-row.ui
@@ -41,6 +41,9 @@
                   </object>
                 </child>
                 <child>
+                  <object class="GtkOverlay">
+                    <child>
+
                   <object class="GtkBox" id="queue_box">
                     <property name="orientation">vertical</property>
                     <property name="valign">center</property>
@@ -49,7 +52,7 @@
                     <child>
                       <object class="GtkLabel" id="song_title_label">
                         <property name="xalign">0</property>
-                        <property name="max-width-chars">35</property>
+                        <property name="max-width-chars">25</property>
                         <property name="ellipsize">end</property>
                         <style>
                           <class name="song-title"/>
@@ -59,7 +62,7 @@
                     <child>
                       <object class="GtkLabel" id="song_artist_label">
                         <property name="xalign">0</property>
-                        <property name="max-width-chars">35</property>
+                        <property name="max-width-chars">30</property>
                         <property name="ellipsize">end</property>
                         <style>
                           <class name="song-artist"/>
@@ -67,16 +70,23 @@
                       </object>
                     </child>
                   </object>
-                </child>
-                <child type="end">
+
+                    </child>
+                    <child type="overlay">
+
                   <object class="GtkButton" id="remove_button">
                     <property name="icon-name">user-trash-symbolic</property>
-                    <property name="halign">center</property>
+                    <property name="halign">end</property>
                     <property name="valign">center</property>
                     <property name="tooltip_text" translatable="yes">Remove</property>
                     <property name="visible">0</property>
+                    <style><class name="opaque"/></style>
+                  </object>
+
+                    </child>
                   </object>
                 </child>
+
                 <style>
                   <class name="song-details"/>
                 </style>
