--- a/src/gtk/playback-control.ui
+++ b/src/gtk/playback-control.ui
@@ -158,6 +158,12 @@
     </section>
     <section>
       <item>
+        <attribute name="label" translatable="yes">_Match Cover Art</attribute>
+        <attribute name="action">app.enable-recoloring</attribute>
+      </item>
+    </section>
+    <section>
+      <item>
         <attribute name="label" translatable="yes">_Keyboard Shortcuts</attribute>
         <attribute name="action">win.show-help-overlay</attribute>
       </item>
