Re-implement the waveform drawing
We need to make sure that the waveform covers the case of short songs,
where the number of samples is smaller than the available width, while
also ensuring that we don't overdraw if the number of samples is bigger
than the width.

In order to do that, we determine the size of the waveform widget using
the number of samples we have at our disposal; this allows us to center
the widget into its parent container in case the waveform is smaller
than the maximum width of 256 pixels. As we are using the motion event
controller and the widget size to determine the position to scrub to, we
must always ensure that the position of 0.0 is the leading edge of the
widget, while the positition of 1.0 is the trailing edge of the widget,
and that any pointer motion directly applies to the waveform.

For the overdrawing case we drop the chunking of the samples, and
instead iterate over all of them, computing how much to advance the
offset after every sample; once we reach the threshold of a bar, we
average the channel values over the accumulated samples, and then draw
the bar at the given position.

The rest of the code stays the same, with the exception of the bar
rectangle sizing, which is clamped to the range of valid values on the
vertical axis, to avoid escaping the height of the widget.

Fixes: #68

--- a/src/gtk/playback-control.ui
+++ b/src/gtk/playback-control.ui
@@ -9,7 +9,7 @@
       <property name="spacing">6</property>
       <child>
         <object class="AmberolWaveformView" id="waveform_view">
-          <property name="hexpand">true</property>
+          <property name="halign">center</property>
           <property name="valign">center</property>
         </object>
       </child>
