--- a/src/gtk/style.css
+++ b/src/gtk/style.css
@@ -111,11 +111,14 @@ window.main-window {
 }
 
 .main-window .playlist-background {
-  background: rgba(0, 0, 0, 0.08),
-              linear-gradient(127deg, alpha(@background_color_1, 0.70), @background_color_1 70.1%),
+  background: linear-gradient(127deg, alpha(@background_color_1, 0.70), @background_color_1 70.1%),
               linear-gradient(217deg, alpha(@background_color_3, 0.70), @background_color_3 70.1%),
               linear-gradient(336deg, alpha(@background_color_2, 0.70), @background_color_2 70.1%);
   color: @foreground_color;
+}
+
+.main-window .darken {
+  background-color: rgba(0, 0, 0, 0.08);
 }
 
 .main-window popover arrow,
