--- a/src/gtk/queue-row.ui
+++ b/src/gtk/queue-row.ui
@@ -41,7 +41,7 @@
                   </object>
                 </child>
                 <child>
-                  <object class="GtkBox" id="queue_box">
+                  <object class="GtkBox">
                     <property name="orientation">vertical</property>
                     <property name="valign">center</property>
                     <property name="hexpand">true</property>
@@ -68,12 +68,53 @@
                     </child>
                   </object>
                 </child>
+                <style>
+                  <class name="song-details"/>
+                </style>
+              </object>
+            </property>
+          </object>
+        </child>
+        <child>
+          <object class="GtkStackPage">
+            <property name="name">selection-mode</property>
+            <property name="child">
+              <object class="GtkBox">
                 <child>
-                  <object class="GtkButton" id="remove_button">
-                    <property name="icon-name">user-trash-symbolic</property>
-                    <property name="halign">end</property>
+                  <object class="GtkCheckButton" id="selected_button">
+                    <property name="halign">center</property>
                     <property name="valign">center</property>
-                    <property name="tooltip_text" translatable="yes">Remove</property>
+                    <style>
+                      <class name="selection-mode"/>
+                    </style>
+                  </object>
+                </child>
+                <child>
+                  <object class="GtkBox">
+                    <property name="orientation">vertical</property>
+                    <property name="valign">center</property>
+                    <property name="hexpand">true</property>
+                    <property name="spacing">3</property>
+                    <child>
+                      <object class="GtkLabel" id="selection_title_label">
+                        <property name="xalign">0</property>
+                        <property name="max-width-chars">35</property>
+                        <property name="ellipsize">end</property>
+                        <style>
+                          <class name="song-title"/>
+                        </style>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="GtkLabel" id="selection_artist_label">
+                        <property name="xalign">0</property>
+                        <property name="max-width-chars">35</property>
+                        <property name="ellipsize">end</property>
+                        <style>
+                          <class name="song-artist"/>
+                        </style>
+                      </object>
+                    </child>
                   </object>
                 </child>
                 <style>
