--- a/src/gtk/window.ui
+++ b/src/gtk/window.ui
@@ -146,15 +146,29 @@
                                     </style>
                                   </object>
                                 </child>
-                                <child>
-                                  <object class="GtkButton" id="back_button">
-                                    <property name="visible">false</property>
-                                    <property name="icon-name">go-previous-symbolic</property>
-                                    <property name="action-name">queue.toggle</property>
-                                    <property name="halign">end</property>
-                                    <property name="valign">center</property>
+                                <child type="end">
+                                  <object class="GtkBox">
                                     <property name="margin-top">10</property>
-                                    <property name="margin-end">20</property>
+                                    <property name="margin-end">12</property>
+                                    <property name="halign">end</property>
+                                    <property name="spacing">6</property>
+                                    <child>
+                                      <object class="GtkToggleButton" id="select_button">
+                                        <property name="icon-name">object-select-symbolic</property>
+                                        <property name="action-name">queue.select</property>
+                                        <property name="valign">center</property>
+                                        <property name="tooltip-text" translatable="yes">Select songs in the playlist</property>
+                                      </object>
+                                    </child>
+                                    <child type="end">
+                                      <object class="GtkButton" id="back_button">
+                                        <property name="visible">false</property>
+                                        <property name="icon-name">go-previous-symbolic</property>
+                                        <property name="action-name">queue.toggle</property>
+                                        <property name="valign">center</property>
+                                        <property name="tooltip-text" translatable="yes">Close the playlist</property>
+                                      </object>
+                                    </child>
                                   </object>
                                 </child>
                               </object>
@@ -175,6 +189,24 @@
                                     </style>
                                   </object>
                                 </property>
+                              </object>
+                            </child>
+                            <child>
+                              <object class="GtkActionBar" id="queue_actionbar">
+                                <property name="revealed">false</property>
+                                <child>
+                                  <object class="GtkButton" id="queue_clear_button">
+                                    <property name="icon-name">list-remove-all-symbolic</property>
+                                    <property name="action-name">queue.clear</property>
+                                    <property name="tooltip-text" translatable="yes">Remove all songs</property>
+                                  </object>
+                                </child>
+                                <child type="end">
+                                  <object class="GtkButton" id="queue_remove_button">
+                                    <property name="icon-name">app-remove-symbolic</property>
+                                    <property name="tooltip-text" translatable="yes">Remove selected songs</property>
+                                  </object>
+                                </child>
                               </object>
                             </child>
                             <style>
