--- a/src/gtk/playback-control.ui
+++ b/src/gtk/playback-control.ui
@@ -23,6 +23,7 @@
               <property name="icon-name">media-skip-backward-symbolic</property>
               <property name="action-name">win.previous</property>
               <property name="valign">center</property>
+              <property name="tooltip-text" translatable="yes">Play the previous song</property>
               <style>
                 <class name="circular"/>
               </style>
@@ -36,6 +37,7 @@
               <property name="icon-name">media-playback-start-symbolic</property>
               <property name="action-name">win.play</property>
               <property name="valign">center</property>
+              <property name="tooltip-text" translatable="yes">Toggle play</property>
               <style>
                 <class name="circular"/>
                 <class name="large"/>
@@ -50,6 +52,7 @@
               <property name="icon-name">media-skip-forward-symbolic</property>
               <property name="action-name">win.next</property>
               <property name="valign">center</property>
+              <property name="tooltip-text" translatable="yes">Play the next song</property>
               <style>
                 <class name="circular"/>
               </style>
@@ -109,6 +112,7 @@
                   <property name="icon-name">media-playlist-consecutive-symbolic</property>
                   <property name="action-name">queue.repeat-mode</property>
                   <property name="valign">center</property>
+                  <property name="tooltip-text" translatable="yes">Repeat Mode</property>
                   <style>
                     <class name="circular"/>
                   </style>
@@ -124,6 +128,7 @@
                   <property name="primary">true</property>
                   <property name="halign">end</property>
                   <property name="valign">center</property>
+                  <property name="tooltip-text" translatable="yes">More..</property>
                   <style>
                     <class name="circular"/>
                   </style>
