Count the selected songs
We don't have a header bar for the playlist, so we use the action bar at
the bottom.

--- a/src/gtk/window.ui
+++ b/src/gtk/window.ui
@@ -201,6 +201,13 @@
                                     <property name="tooltip-text" translatable="yes">Remove all songs</property>
                                   </object>
                                 </child>
+                                <child type="center">
+                                  <object class="GtkLabel" id="queue_selected_label">
+                                    <style>
+                                      <class name="caption"/>
+                                    </style>
+                                  </object>
+                                </child>
                                 <child type="end">
                                   <object class="GtkButton" id="queue_remove_button">
                                     <property name="icon-name">app-remove-symbolic</property>
